Fixed the errors, contrast, and table settings

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   float: right;
 }
 .navigation li {
-  list-style: none;
+  list-style: ol;
   float: left;
   margin: 20px 20px 40px;
   font-size: 24px;
@@ -42,10 +42,10 @@ th, td {
   width: 350px;
 }
 /*
-# id
-cell is name of id
+'#' = id
+"cell" is name of id
 */
 #cell1 {background-color: #fff}
-#cell2 {background-color: #E8E7ED; color:#FFFEC9;}
+#cell2 {background-color: #0000a2; color:#ffa4fd;}
 #cell3 {background-color: #000000; color:#ffffff;}
-#cell4 {background-color: #283A00}
+#cell4 {background-color: #394914; color:#fddb21;}
